@@ -6,6 +6,9 @@ Revision history for Types-SQL
 
   - Bumped copyright year.
 
+  [Other Changes]
+  - No longer requires strictures module.
+
 v0.0.3    2016-01-14 13:40:05+00:00 Europe/London
   [Enhancements]
   - Added support for datetime data types [GitHub #1].
